<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_name_main_menu">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="settings_1">Темная тема</string>
    <string name="settings_2">Поделиться приложением</string>
    <string name="settings_3">Написать в поддержку</string>
    <string name="settings_4">Пользовательское соглашение</string>

    <string name="share_text">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="email_recipient">mayerhofnew@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="no_internet_connection">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>

    <string name="you_have_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="zeroZero">00:00</string>

    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_favourites_placeholder">Ваша медиатека пуста</string>
    <string name="empty_playlists_placeholder">Вы не создали \n ни одного плейлиста</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <plurals name="playlist_track_count">
        <item quantity="one">%1$d трек</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="playlist_duration">
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <string name="playlist_created">Плейлист %s создан</string>
    <string name="dialog_alert_title">Завершить создание плейлиста?</string>
    <string name="dialog_alert_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_alert_positive">Завершить</string>
    <string name="dialog_alert_neutral">Отмена</string>

    <string name="mock_playlist_name">Неофолк в дорогу</string>
    <string name="mock_playlist_description">Для настоящих мужиков!</string>
    <string name="mock_playlist_duration">228 минут</string>
    <string name="mock_playlist_track_count">228 треков</string>

    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_is_already_in">Трек уже добавлен в плейлист %s</string>
    <string name="remove_track_dialog_alert_message">Хотите удалить трек?</string>
    <string name="yes_upper_case">ДA</string>
    <string name="no_upper_case">НЕТ</string>

    <string name="share">Поделиться</string>
    <string name="share_playlist">Отправка плейлиста</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист «%s»?</string>
    <string name="no_tracks_to_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks_message">В этом плейлисте пока нет треков</string>

    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>

</resources>