<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        app:title="@string/settings"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        style="@style/GraySwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_6"
        android:minHeight="@dimen/dp_60"
        android:text="@string/settings_1"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/sp_16" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_btn"
        style="@style/SettingsItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/settings_2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_btn"
        style="@style/SettingsItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/settings_3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/offer_btn"
        style="@style/SettingsItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/settings_4" />
</LinearLayout>