<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/YP_white"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_52"
        android:background="@color/YP_white">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            android:layout_width="@dimen/dp_48"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_12"
            android:backgroundTint="@color/YP_white"
            android:outlineSpotShadowColor="@color/YP_white"

            app:icon="@drawable/ic_arrow_back"
            app:iconSize="@dimen/dp_24"
            app:iconTint="@color/YP_black"
            app:cornerRadius="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_86"

            android:text="@string/settings"
            android:textColor="@color/YP_black"
            android:textSize="@dimen/heading_text" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_options_height"
        android:layout_marginTop="@dimen/dp_24"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_6"
        android:background="@color/YP_white" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"

            android:text="@string/settings_1"
            android:textColor="@color/setting_text_black"
            android:textSize="@dimen/settings_options" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/dp_12"
            android:paddingStart="@dimen/dp_8"
            android:theme="@style/GraySwitch"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_options_height"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_12" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"

            android:text="@string/settings_2"
            android:textColor="@color/setting_text_black"
            android:textSize="@dimen/settings_options" />

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="match_parent"
            android:layout_gravity="end"

            android:src="@drawable/ic_share"
            android:scaleType="center" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_options_height"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_12" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"

            android:text="@string/settings_3"
            android:textColor="@color/setting_text_black"
            android:textSize="@dimen/settings_options" />

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="match_parent"
            android:layout_gravity="end"

            android:src="@drawable/ic_support"
            android:scaleType="center" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_options_height"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_12" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"

            android:text="@string/settings_4"
            android:textColor="@color/setting_text_black"
            android:textSize="@dimen/settings_options" />

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="match_parent"
            android:layout_gravity="end"

            android:src="@drawable/ic_arrow_forward"
            android:scaleType="center" />
    </FrameLayout>
</LinearLayout>