<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnPrimary"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_52">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            style="@style/HeaderBackButton"
            android:layout_width="@dimen/dp_48"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_arrow_back" />

        <TextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginVertical="@dimen/dp_8"
        android:background="@drawable/search_bar_background"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="@dimen/dp_10"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_8"
            android:src="@drawable/ic_search_16x16" />

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:backgroundTint="?attr/lightGrayToWhite"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/YP_black"
            android:textColorHint="?attr/textGrayToBlack"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="@dimen/dp_12"
            android:paddingVertical="@dimen/dp_10"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_16"
        android:visibility="gone"
        tools:listitem="@layout/track_item" /> <!-- Ты сделал ресайклер невидимым -->

    <LinearLayout
        android:id="@+id/placeholder_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_100"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder_not_found" />

        <TextView
            style="@style/searchActivityPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_found" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder_no_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_100"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder_no_internet" />

        <TextView
            style="@style/searchActivityPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_24"
            android:gravity="center_horizontal"
            android:text="@string/no_internet_connection" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/update"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/sp_16"
            app:cornerRadius="@dimen/dp_52" />
    </LinearLayout>
</LinearLayout>