<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YP_light_gray"
    tools:context=".media.ui.playlist_screen.PlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_24">

        <ImageView
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_45"
            android:src="@drawable/ic_action_bar"
            app:layout_constraintStart_toEndOf="@id/share_button"
            app:layout_constraintTop_toBottomOf="@id/playlist_description" />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_45"
            android:src="@drawable/ic_share_black"
            app:layout_constraintStart_toEndOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/playlist_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/track_count"
            style="@style/PlaylistDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toTopOf="@+id/divider"
            tools:text="@string/mock_playlist_track_count" />

        <ImageView
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/dot_divider"
            app:layout_constraintEnd_toStartOf="@id/track_count"
            app:layout_constraintStart_toEndOf="@id/playlist_duration"
            app:layout_constraintTop_toBottomOf="@id/playlist_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/playlist_duration"
            style="@style/PlaylistDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintEnd_toStartOf="@id/divider"
            app:layout_constraintStart_toEndOf="@id/left_border"
            app:layout_constraintTop_toTopOf="@id/divider"
            tools:text="@string/mock_playlist_duration" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/playlist_description"
            style="@style/PlaylistDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintEnd_toStartOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/playlist_name"
            tools:text="@string/mock_playlist_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/playlist_name"
            style="@style/PlaylistTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            app:layout_constraintEnd_toStartOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/cover"
            tools:text="@string/mock_playlist_name" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_16" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="center"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/placeholder_237x234" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/YP_black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:clickable="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/tracks_bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_rounded_reclangle"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="false"
        app:behavior_peekHeight="@dimen/playlist_tracks_bottom_sheet_peek_height"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/long_pill_rectangle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            tools:itemCount="4"
            tools:listitem="@layout/track_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_rounded_reclangle"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/dp_372"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/long_pill_rectangle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="?attr/colorOnPrimary"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dp_12">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/bottom_sheet_playlist_cover"
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:layout_marginVertical="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                app:round="@dimen/dp_4"
                tools:src="@drawable/ic_placeholder_35x35" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_14"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bottom_sheet_playlist_name"
                    style="@style/TrackItemText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/mock_playlist_name" />

                <TextView
                    android:id="@+id/bottom_sheet_track_count"
                    style="@style/TrackItemText.BottomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/mock_playlist_track_count" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bottom_sheet_share_button"
            style="@style/SettingsItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bottom_sheet_edit_button"
            style="@style/SettingsItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_info" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bottom_sheet_delete_button"
            style="@style/SettingsItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_playlist" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>